# naval-gallery

./: .gitignore  README.md  TODO.md  index.html  pyproject.toml
data/: dreadnought_manifest.json  ia_manifest.json  images.js  loc_manifest.json  master_manifest.json  oni_manifest.json  wiki_manifest.json
docs/: ARCHITECTURE.md  DECISIONS.md
docs/proposals/: streamlit-frontend.md
tests/: test_db.py  test_harvesters.py  test_pipeline.py  test_vision.py
tests/fixtures/: wikimedia_category_response.json  wikimedia_fileinfo_response.json
tools/: classify_images.py  collate_manifests.py  config.py  db.py  debug_search.py  organize_gallery.py  resize_images.py  run_all.py  smart_harvester.py
tools/harvesters/: PINTEREST_COOKIE_GUIDE.md  README_PINTEREST.md  blueprints_crawler.py  cookie_validator.py  deep_archivist.py  dreadnought_scraper.py  manual_siphon.py  official_channels.py  pinterest_scraper.py  wiki_walker.py
tools/vision/: __init__.py  client.py  protocol.py
