[project]
name = "naval-gallery"
version = "0.1.0"
description = "Image harvesting pipeline for naval technical drawings"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "internetarchive>=3.5.0",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
